cart updated, can now increase and decrease the quantity of an item, and its now being displayed correctly.
Shopping page updated, displays correctly on smaller devices without images being stretched

--- a/WebApplication/src/app/sites/cart/cart.component.css
+++ b/WebApplication/src/app/sites/cart/cart.component.css
@@ -11,7 +11,7 @@ section{
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  width: 93%
+  width: 100%;
 }
 h2{
   margin-left: 50px;
@@ -25,8 +25,6 @@ ul{
   background-color: #EEEEEE;
   border-radius: 8px;
   padding-right: 40px;
-
-
 }
 li{
   display: flex;
@@ -39,10 +37,15 @@ li{
   justify-content: center;
   align-items: center;
   border: 2px solid #DDDDDD;
-  padding: 8px;
+  padding-left: 15px;
   border-radius: 8px;
-  gap: 5px;
-  margin: 5px;
+  gap: 15px;
+  margin: 5px 5px 15px 5px;
+}
+.cartProductRight{
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .cartProductButtons{
   display: flex;
@@ -53,7 +56,19 @@ button{
   width: 50px;
   height: 50px;
 }
+.cartSingularProductCost{
+  font-style: italic;
+  margin-right: 5px;
+}
 
 img{
   height: 100px;
+}
+
+@media screen and (max-width: 600px) {
+  li{
+    flex-direction: column;
+    padding: 15px 0 15px 0;
+    border-bottom: 1px solid #DDDDDD;
+  }
 }
